--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -18,12 +18,17 @@ horologistComposeTools = "0.6.17"
 horologistTiles = "0.6.17"
 watchfaceComplicationsDataSourceKtx = "1.2.1"
 material3Android = "1.3.1"
-composeMaterial3 = "1.0.0-alpha35"
+composeMaterial3 = "1.0.0-alpha36"
+horologist = "0.5.26"
 
 [libraries]
+compose-materialIconsCore = { group = "androidx.compose.material", name = "material-icons-core" } # Version from BOM or version.ref
+compose-materialIconsExtended = { group = "androidx.compose.material", name = "material-icons-extended" } # Version from BOM or version.ref
 accompanist-pager = { module = "com.google.accompanist:accompanist-pager", version.ref = "accompanistPagerIndicators" }
 accompanist-pager-indicators = { module = "com.google.accompanist:accompanist-pager-indicators", version.ref = "accompanistPagerIndicators" }
 horologist-compose-layout = { module = "com.google.android.horologist:horologist-compose-layout", version.ref = "horologistComposeLayout" }
+horologist-composables = { group = "com.google.android.horologist", name = "horologist-composables", version.ref = "horologist" }
+horologist-picker = { group = "com.google.android.horologist", name = "horologist-picker", version.ref = "horologist" }
 play-services-wearable = { group = "com.google.android.gms", name = "play-services-wearable", version.ref = "playServicesWearable" }
 compose-bom = { group = "androidx.compose", name = "compose-bom", version.ref = "composeBom" }
 ui = { group = "androidx.compose.ui", name = "ui" }
