--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,6 +7,9 @@
 
     <uses-permission android:name="android.permission.VIBRATE"/>
 
+    <!-- Required for HR sensor -->
+    <uses-permission android:name="android.permission.BODY_SENSORS" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
