--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,70 +1,42 @@
 [versions]
-accompanistPagerIndicators = "0.36.0"
 agp = "8.9.1"
+accompanistPagerIndicators = "0.36.0"
+desugar_jdk_libs = "2.1.5"
 healthServicesClientVersion = "1.1.0-alpha05"
-horologistComposeLayout = "0.2.0"
 kotlin = "2.0.0"
-lifecycleViewmodelCompose = "2.7.0"
-playServicesWearable = "19.0.0"
-composeBom = "2025.03.01"
+lifecycleViewmodelCompose = "2.8.7"
+composeBom = "2025.04.00"
 composeMaterial = "1.4.1"
 composeFoundation = "1.4.1"
-wearToolingPreview = "1.0.0"
 activityCompose = "1.10.1"
 coreSplashscreen = "1.0.1"
-tiles = "1.4.1"
-tilesMaterial = "1.4.1"
-tilesTooling = "1.4.1"
-tilesToolingPreview = "1.4.1"
 horologistComposeTools = "0.6.17"
 horologistTiles = "0.6.17"
-watchfaceComplicationsDataSourceKtx = "1.2.1"
-material3Android = "1.3.1"
-guava = "33.3.1-android"
 concurrent-futures = "1.2.0"
 accompanist-permissions = "0.36.0"
-lifecycleViewmodelKtx = "2.8.7"
 composeMaterial3 = "1.0.0-alpha36"
 horologist = "0.5.26"
-composeMaterialVersion = "1.3.1"
 
 [libraries]
 compose-materialIconsCore = { group = "androidx.compose.material", name = "material-icons-core" } # Version from BOM or version.ref
 compose-materialIconsExtended = { group = "androidx.compose.material", name = "material-icons-extended" } # Version from BOM or version.ref
-accompanist-pager = { module = "com.google.accompanist:accompanist-pager", version.ref = "accompanistPagerIndicators" }
 accompanist-pager-indicators = { module = "com.google.accompanist:accompanist-pager-indicators", version.ref = "accompanistPagerIndicators" }
 androidx-health-services-client = { module = "androidx.health:health-services-client", version.ref = "healthServicesClientVersion" }
 androidx-lifecycle-viewmodel-compose = { module = "androidx.lifecycle:lifecycle-viewmodel-compose", version.ref = "lifecycleViewmodelCompose" }
-horologist-compose-layout = { module = "com.google.android.horologist:horologist-compose-layout", version.ref = "horologistComposeLayout" }
+desugar_jdk_libs = { module = "com.android.tools:desugar_jdk_libs", version.ref = "desugar_jdk_libs" }
 horologist-composables = { group = "com.google.android.horologist", name = "horologist-composables", version.ref = "horologist" }
-horologist-picker = { group = "com.google.android.horologist", name = "horologist-picker", version.ref = "horologist" }
-play-services-wearable = { group = "com.google.android.gms", name = "play-services-wearable", version.ref = "playServicesWearable" }
 compose-bom = { group = "androidx.compose", name = "compose-bom", version.ref = "composeBom" }
 ui = { group = "androidx.compose.ui", name = "ui" }
 ui-graphics = { group = "androidx.compose.ui", name = "ui-graphics" }
-ui-tooling = { group = "androidx.compose.ui", name = "ui-tooling" }
-ui-tooling-preview = { group = "androidx.compose.ui", name = "ui-tooling-preview" }
-ui-test-manifest = { group = "androidx.compose.ui", name = "ui-test-manifest" }
-ui-test-junit4 = { group = "androidx.compose.ui", name = "ui-test-junit4" }
 compose-material = { group = "androidx.wear.compose", name = "compose-material", version.ref = "composeMaterial" }
 compose-foundation = { group = "androidx.wear.compose", name = "compose-foundation", version.ref = "composeFoundation" }
-wear-tooling-preview = { group = "androidx.wear", name = "wear-tooling-preview", version.ref = "wearToolingPreview" }
 activity-compose = { group = "androidx.activity", name = "activity-compose", version.ref = "activityCompose" }
 core-splashscreen = { group = "androidx.core", name = "core-splashscreen", version.ref = "coreSplashscreen" }
-tiles = { group = "androidx.wear.tiles", name = "tiles", version.ref = "tiles" }
-tiles-material = { group = "androidx.wear.tiles", name = "tiles-material", version.ref = "tilesMaterial" }
-tiles-tooling = { group = "androidx.wear.tiles", name = "tiles-tooling", version.ref = "tilesTooling" }
-tiles-tooling-preview = { group = "androidx.wear.tiles", name = "tiles-tooling-preview", version.ref = "tilesToolingPreview" }
 horologist-compose-tools = { group = "com.google.android.horologist", name = "horologist-compose-tools", version.ref = "horologistComposeTools" }
 horologist-tiles = { group = "com.google.android.horologist", name = "horologist-tiles", version.ref = "horologistTiles" }
-watchface-complications-data-source-ktx = { group = "androidx.wear.watchface", name = "watchface-complications-data-source-ktx", version.ref = "watchfaceComplicationsDataSourceKtx" }
-material3-android = { group = "androidx.compose.material3", name = "material3-android", version.ref = "material3Android" }
 compose-material3 = { group = "androidx.wear.compose", name = "compose-material3", version.ref = "composeMaterial3" }
-guava = { module = "com.google.guava:guava", version.ref = "guava" }
 concurrent-futures = { module = "androidx.concurrent:concurrent-futures-ktx", version.ref = "concurrent-futures" }
 accompanist-permissions = { module = "com.google.accompanist:accompanist-permissions", version.ref = "accompanist-permissions" }
-androidx-lifecycle-viewmodel-ktx = { group = "androidx.lifecycle", name = "lifecycle-viewmodel-ktx", version.ref = "lifecycleViewmodelKtx" }
-compose-material-v131 = { module = "androidx.wear.compose:compose-material", version.ref = "composeMaterialVersion" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
