--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -16,6 +16,7 @@ concurrent-futures = "1.2.0"
 accompanist-permissions = "0.36.0"
 composeMaterial3 = "1.0.0-alpha36"
 horologist = "0.5.26"
+spotless = "6.25.0"
 
 [libraries]
 compose-materialIconsCore = { group = "androidx.compose.material", name = "material-icons-core" } # Version from BOM or version.ref
@@ -42,4 +43,4 @@ accompanist-permissions = { module = "com.google.accompanist:accompanist-permiss
 android-application = { id = "com.android.application", version.ref = "agp" }
 kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 kotlin-compose = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
-
+spotless = { id = "com.diffplug.spotless", version.ref = "spotless" }
